--- a/_python/t01.md
+++ b/_python/t01.md
@@ -11,7 +11,7 @@ Comezamos co noso primeiro código en python empregando unha función que trae d
 Abre un IDE para teclear o código, p.e. VSCodium e crea un ficheiro novo que se chame _tarefa1.py_ Lembra onde o gardas, suxiro que  o fagas no escritorio ou nunha carpeta.
 
 
-### 🖥 Código
+### 💻 Código
 
 Tecleamos a seguinte liña de código:
 
@@ -47,3 +47,5 @@ Inventa todas as variacións que se te ocurran: con comiñas, sen elas, con til,
 ► Se poñemos entre comiñas calquera cousa: letras ou números fai algo así coma "copipaste". Falamos de **cadeas** (Strings)
 
 ► Se o que poñemos é unha conta matemática (sen comiñas) mostra o resultado: os ordenadores saben moito de números.
+
+Sube o teu ficheiro ao repositorio.
