--- a/_python/t02.md
+++ b/_python/t02.md
@@ -13,7 +13,7 @@ Podemos comezar co mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-### 🖥 Código
+### 💻 Código
 
 No ficheiro *tarefa2.py* tecleamos a seguinte liña de código:
 
