--- a/_python/t03.md
+++ b/_python/t03.md
@@ -13,7 +13,7 @@ Sumar, restar e multiplicar sabe facelo calquera pero se queremos unha conta  ma
 Lembra a proposta de [ Tarefa 0: Crear infraestrutura](../t0)
 
 
-### 🖥 Código
+### 💻 Código
 
 Tecleamos:
 ```python
