--- a/_python/t04.md
+++ b/_python/t04.md
@@ -13,7 +13,7 @@ Precisamos un ficheiro ao que imos chamar **tarefa4_pregunta.py** Facemos o mesm
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-### 🖥 Código
+### 💻 Código
 
 No ficheiro *.py* tecleamos:
 
