--- a/_python/t06.md
+++ b/_python/t06.md
@@ -12,7 +12,7 @@ Precisamos un ficheiro ao que imos chamar **tarefa6_condicionais.py** Podemos fa
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-### 🖥 Código 1
+### 💻 Código 1
 
 No ficheiro *.py* tecleamos:
 ```python
