--- a/_python/t07.md
+++ b/_python/t07.md
@@ -11,7 +11,7 @@ Precisamos unha carpeta á que imos chamar **tarefa7_funcións** que terá coma 
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-### 🖥 Código 1
+### 💻 Código 1
 
 No ficheiro *.js* tecleamos:
 ```js
