--- a/_python/t08.md
+++ b/_python/t08.md
@@ -10,7 +10,7 @@ A idea ... non era facer páxinas web dinámicas????
 
 Descarga ou fai un fork do [repositorio de exercicios resoltos de JavaScript](https://github.com/irocho/exerciciosJavascript).
 
-### 🖥 Códigos para analizar e argallar neles
+### 💻 Códigos para analizar e argallar neles
 
 Analiza os exercicios 1, 2 e 3 que teñen en cadanseu *.html* ? Algunha novidade nos  *.js*  que non sexa:
 
