--- a/_python/t09.md
+++ b/_python/t09.md
@@ -10,7 +10,7 @@ Repetir e repetir... menudo aburrimento, para eso están as maquinas!!! Nós pol
 Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
 
-### 🖥 Código 1 
+### 💻 Código 1 
 
 A sintaxe do bucle `for` é un tanto enrevesada: dentro de paréntese, con puntos e comas polo medio, de súpeto esa _cruz_ repetida. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa:
 
