--- a/_python/t10.md
+++ b/_python/t10.md
@@ -10,7 +10,7 @@ Xa sabemos de bucles e xogando chegamos ata os bucles infindos. Hai outro xeito 
 Precisamos unha carpeta á que imos chamar **tarefa10_while** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
 
-### 🖥 Código 1 
+### 💻 Código 1 
 Imos facer agora que se execute o código que está entre chaves  tantas veces como indiquemos na paréntese. Fixádevos que temos que crear e inicializar a variable antes do `while`, xa irá o bucle contando despois. Neste caso é cuspidiño a un lazo `for`.
 
 ```js
