--- a/_python/t11.md
+++ b/_python/t11.md
@@ -12,7 +12,7 @@ Dise que JavaScript é unha linguaxe dirixida por eventos, e nós xa falamos dos
 Precisamos unha carpeta á que imos chamar **tarefa11_formulario** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
 
-### 🖥 Código 1 
+### 💻 Código 1 
 
 Primeiro imos inserir un nadita de código JavaScript no mesmo _.html_  para facer probas rápidas. No ficheiro _index.html_ e deixando o _.js_ en branco, tecleamos:
 
