--- a/_python/t0.md
+++ b/_python/t0.md
@@ -12,7 +12,7 @@ Cada proxecto será un ficheiro.py que tedes que subir ao voso repositorio perso
 No meu repositorio tes [unha pequena plantilla aquí](https://github.com/irocho/pythonBAC/blob/master/00_inicial.py).
 
 
-### 🖥 O que debes facer:
+### 💻 O que debes facer:
 
 1. Crea un repositorio no teu GitHub para estes proxectiños.
 2. Vai subindo os ficheiros.py que imos tecleando en cada tarefa. Ponlles de nome o que se indica para que  deamos organizado todo ben.
