--- a/_python/t03.md
+++ b/_python/t03.md
@@ -1,6 +1,7 @@
 ---
 layout: python
 title: Tarefa 3 - Mates
+published: true
 ---
 ### Máis  contas nas librerías
 
@@ -29,7 +30,7 @@ O que facemos na segunda liña é usar `math.sqrt()`que vén sendo como se chama
 
 Imos complicalo un chisco máis:
 ```python
-    moito = 9 ;
+moito = 9 
 print (math.sqrt(moito))
 ```
 
@@ -46,3 +47,4 @@ Investiga ti por internet un chisco na biblioteca `math`
 - A función que responde coa menor das variables
 - Unha función que xenera un número aleatorio entre cero e tres
 
+Sube ao teu repositorio o ficheiro _tarefa3_mate.py_ coa solución deste proxectiño.
