--- a/_python/t05.md
+++ b/_python/t05.md
@@ -1,6 +1,6 @@
 ---
 layout: javascript
-title: Tarefa 5 - Detalle cos números
+title: Tarefa 5 - Detalle con números e ovos
 published: false
 ---
 
@@ -34,13 +34,13 @@ print("O triple do teu número favorito é.... ", numerito*3)
 *Aclaración: unha ducia son 12 ovos*
 
 1. Prepara  **tarefa5_ducias2ovos.py**
-2. Pregunta ao usuario cantas ducias de ovos leva a sú tortilla usando `input();`. 
+2. Pregunta ao usuario cantas ducias de ovos leva a súa tortilla usando `input();`. 
 3. Convirte a resposta do usuario a número con `int();`
 4. Mostra o que dixo o usuario convertido a número.
 5. Fai a conta correspondente para saber cantos ovos leva esa megatortilla.
 6. Mostra o resultado do número de ovos
 
-Sube ao teu repositorio deste proxecto chamada **tarefa5_ducias2ovos.py**
+Sube ao teu repositorio este proxecto chamándolle **tarefa5_ducias2ovos.py**
 
 
 ### ✏️ Cambios interesantes
