--- a/_python/t06.md
+++ b/_python/t06.md
@@ -16,12 +16,11 @@ Precisamos un ficheiro ao que imos chamar **tarefa6_condicionais.py** Podemos fa
 
 No ficheiro *.py* tecleamos:
 ```python
-
-    var posicion = 3;
-    if(posicion == 1) {
-    	alert("Medalla de ouro");
-    } else {
-    	alert("Non es o campeón ");
+var posicion = 3;
+if(posicion == 1) {
+	print("Medalla de ouro");
+} else {
+    print("Non es o campeón ");
     }
 ```
 
@@ -29,14 +28,13 @@ No ficheiro *.py* tecleamos:
 
 Analiza o  seguinte código e trata de imaxinar como funciona:
 
-```js
-
-    var desexo = confirm("Queres seguer nesta páxina?");
-    if (desexo == true){
-    	alert("Aquí nos quedamos");
-    } else {
-    	alert("De verdade acabas de premer en Cancel ?");
-    }
+```python
+var desexo = confirm("Queres seguer nesta páxina?");
+if (desexo == true){
+	print("Aquí nos quedamos");
+} else {
+	print("De verdade acabas de premer en Cancel ?");
+}
 ```
 
 ### 🎞 Visualizar o javascript
