--- a/_python/t07.md
+++ b/_python/t07.md
@@ -1,5 +1,5 @@
 ---
-layout: javascript
+layout: python
 title: Tarefa 7 - Funcións
 published: false
 ---
@@ -13,34 +13,34 @@ Precisamos unha carpeta á que imos chamar **tarefa7_funcións** que terá coma 
 
 ### 💻 Código 1
 
-No ficheiro *.js* tecleamos:
-```js
-    function sumita(a, b){
-        alert(a+b);
-    }
-    sumita(11,22);
-    sumita(100,200);  
+No ficheiro tarefa7_funcións.py* tecleamos:
+```python
+function sumita(a, b){
+    alert(a+b);
+}
+sumita(11,22);
+sumita(100,200);  
 ```
 
 ### 🖥 Código 2
 
 Analiza o  seguinte código e trata de imaxinar como funciona:
 
-```js
-    function dividir(x,y){
-    		return x/y;
-    }
-    var resultado = dividir(6,3);
-    alert(resultado);
+```python
+function dividir(x,y){
+		return x/y;
+}
+var resultado = dividir(6,3);
+alert(resultado);
 ```
 
 ### 🖥 Código 3
 
 ```js	
-    function mediaNotas(trim1, trim2, trim3){
-    	return (trim1 + trim2 + trim3)/3;
-    }
-    alert(mediaNotas(5,5,7));
+function mediaNotas(trim1, trim2, trim3){
+	return (trim1 + trim2 + trim3)/3;
+}
+alert(mediaNotas(5,5,7));
 ```
 
 ### 🎞 Visualizar o javascript
