--- a/_python/t05.md
+++ b/_python/t05.md
@@ -1,7 +1,7 @@
 ---
 layout: javascript
 title: Tarefa 5 - Detalle con números e ovos
-published: false
+published: true
 ---
 
 Na [tarefa anterior](../t4) o noso código preguntaba e  **resp** era o nome da variable que tiña o que tecleaba o usuario. Se  **resp** é un número e quero usalo despois para facer contas matemáticas a cousa complícase un nadita.
@@ -24,7 +24,8 @@ Haberá que transformar o que di o usuario nun número "de verdade" para facer c
 ```python
 contestado = input("Cal é o teu número favorito? ")
 numerito = int(contestado)
-print("O triple do teu número favorito é.... ", numerito*3)
+triple = numerito*3
+print("Tres veces do teu número favorito é.... ", triple)
 ```
 
 
