CONDICIONAL IF  publicado

--- a/_python/t06.md
+++ b/_python/t06.md
@@ -1,7 +1,7 @@
 ---
 layout: python
 title: Tarefa 6 - Condicionais
-published: false
+published: true
 ---
 
 Se entendes esto daquela non terás problema cos condicionais, no caso contrario... vas ter que analizalo con calma. Ou o que vén sendo o mesmo: `if (`entendes `==` si`) {`No problem`} else {`Analiza con calma`}`
@@ -12,37 +12,19 @@ Precisamos un ficheiro ao que imos chamar **tarefa6_condicionais.py** Podemos fa
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-### 💻 Código 1
+### 💻 Código 
 
 No ficheiro *.py* tecleamos:
 ```python
-var posicion = 3;
-if(posicion == 1) {
-	print("Medalla de ouro");
-} else {
-    print("Non es o campeón ");
-    }
+posicion = 3
+if(posicion == 1):
+	print("Medalla de ouro")
+else:
+    print("Non es o campeón ")
 ```
-
-### 🖥 Código 2
-
-Analiza o  seguinte código e trata de imaxinar como funciona:
-
-```python
-var desexo = confirm("Queres seguer nesta páxina?");
-if (desexo == true){
-	print("Aquí nos quedamos");
-} else {
-	print("De verdade acabas de premer en Cancel ?");
-}
-```
-
-### 🎞 Visualizar o javascript
-
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
 
 ### ✏️ Cambios interesantes
 
-Como se fará para que na alerta do código 1 para mostre que é medalla de bronce? 
+Como se fará para que  mostre que é medalla de bronce? 
 
-Como melloramos o código 1 para preguntar ao usuario cal é a posición na que quedou e que nunha alerta indique cal é a medalla que lle corresponde
+Como melloramos o código  para preguntar ao usuario cal é a posición na que quedou e que  indique cal é a medalla que lle corresponde?
