--- a/_python/t06.md
+++ b/_python/t06.md
@@ -14,7 +14,7 @@ Precisamos un ficheiro ao que imos chamar **tarefa6_condicionais.py** Podemos fa
 
 ### 💻 Código 
 
-No ficheiro *.py* tecleamos:
+No ficheiro *tarefa6_condicionais.py* tecleamos:
 ```python
 posicion = 3
 if(posicion == 1):
