--- a/_python/t05.md
+++ b/_python/t05.md
@@ -4,9 +4,9 @@ title: Tarefa 5 - Detalle con números e ovos
 published: true
 ---
 
-Na [tarefa anterior](../t4) o noso código preguntaba e  **resp** era o nome da variable que tiña o que tecleaba o usuario. Se  **resp** é un número e quero usalo despois para facer contas matemáticas a cousa complícase un nadita.
+Na [tarefa anterior](../t04) o noso código preguntaba e  **resp** era o nome da variable que garda o que tecleaba o usuario. 
 
-Python considera que o que contesta o usuario é sempre "letras" que aquí se chaman _cadeas._ Python non sabe facer operacións matemáticas con cadeas. Cómpre converter as cadeas en enteiros ou noutro tipo de números.
+Se  **resp** é un número e quero usalo despois para facer contas matemáticas a cousa complícase un nadita. Python considera que o que contesta o usuario é sempre "letras" que aquí se chaman _cadeas._ Python non sabe facer operacións matemáticas con cadeas. Cómpre converter as cadeas en números enteiros.
 
 ### 🧺 Preparación
 
@@ -35,11 +35,11 @@ print("Tres veces do teu número favorito é.... ", triple)
 *Aclaración: unha ducia son 12 ovos*
 
 1. Prepara  **tarefa5_ducias2ovos.py**
-2. Pregunta ao usuario cantas ducias de ovos leva a súa tortilla usando `input();`. 
-3. Convirte a resposta do usuario a número con `int();`
+2. Pregunta ao usuario cantas ducias de ovos leva a súa tortilla usando `input()`. 
+3. Convirte a resposta do usuario a número con `int()`
 4. Mostra o que dixo o usuario convertido a número.
 5. Fai a conta correspondente para saber cantos ovos leva esa megatortilla.
-6. Mostra o resultado do número de ovos
+6. Mostra en pantalla o resultado do número de ovos.
 
 Sube ao teu repositorio este proxecto chamándolle **tarefa5_ducias2ovos.py**
 
