--- a/_python/t08.md
+++ b/_python/t08.md
@@ -1,10 +1,10 @@
 ---
 layout: python
-title: Tarefa 8 - DOM ^^
+title: Tarefas en xanelas
 published: false
 ---
 
-A idea ... non era facer páxinas web dinámicas????
+Que tal se todo o que aprendemos en troques de no IDE ou no terminal aparécelle ao usuario nunha xanela. Queda bastante PRO pero dá  traballo. 
 
 ### 🧺 Preparación
 
