Python para contornos

--- a/_python/t02.md
+++ b/_python/t02.md
@@ -7,12 +7,6 @@ published: true
 
 Imos complicalo un chisco. Se non poñemos comiñas na tarefa anterior python entende que ten que poñer o valor dunha variable.😰
 
-### 🧺 Preparación
-
-Podemos comezar co mesmo que na anterior tarefa:
-
-[ Tarefa 0: Crear infraestrutura](../t0)
-
 ### 💻 Código
 
 No ficheiro *tarefa2.py* tecleamos a seguinte liña de código:
@@ -32,10 +26,10 @@ Esto significa que na memoria do ordenador reservamos unha parte á que lle cham
 Fai un pequeno cambio:
 
 ```python
-gastoHoxe = 22.22;
-gastoOnte = 33.33;
-total = gastoHoxe + gastoOnte;
-print(total);
+gastoHoxe = 22.22
+gastoOnte = 33.33
+total = gastoHoxe + gastoOnte
+print(total)
 ```
 
 No código creamos tres variables, metimos nas dúas primeiras uns numeritos e na terceira variable mandámoslle facer unha suma. Parece que a fixo ben. 
