--- a/_python/t03.md
+++ b/_python/t03.md
@@ -9,9 +9,6 @@ E como se fai unha raíz cadrada? Benvidos ao fascinante mundo das bibliotecas (
 
 Sumar, restar e multiplicar sabe facelo calquera pero se queremos unha conta  matemática máis complexa temos que solicitar unha biblioteca de funcións. Cando unha función non vén de fábrica pode ser que estea nunha biblioteca, en cal? Seguro que en internet obtemos información.
 
-### 🧺 Preparación
-
-Lembra a proposta de [ Tarefa 0: Crear infraestrutura](../t0)
 
 
 ### 💻 Código
@@ -25,7 +22,7 @@ Notades o que fai? A primeira liña trae unha biblioteca que se chama *math*.  C
 
 O que facemos na segunda liña é usar `math.sqrt()`que vén sendo como se chama a función para calcular a raíz cadrada  usando a librería *math* (tiven que buscalo por internet, non pensedes que me sei todas as funcións desta biblioteca de memoria)
 
- No noso caso a función ***sqrt()*** forma parte da biblioteca ***math*** polo que  teclearemos `math.sqrt();`
+No noso caso a función ***sqrt()*** forma parte da biblioteca ***math*** polo que  teclearemos `math.sqrt();`
 
 
 Imos complicalo un chisco máis:
@@ -39,12 +36,10 @@ print (math.sqrt(moito))
 
 Investiga ti por internet un chisco na biblioteca `math`
 
-2.  Crea tres variables numéricas de catro cifras decimais para xogar con elas. 
-3. Tes que mostrar en pantalla:
+- Crea tres variables numéricas de catro cifras decimais para xogar con elas. 
+- Tes que mostrar en pantalla:
 - A raíz cadrada dunha das variables
 - O cadrado doutra delas
 - O valor do número PI sen decimais
 - A función que responde coa menor das variables
 - Unha función que xenera un número aleatorio entre cero e tres
-
-Sube ao teu repositorio o ficheiro _tarefa3_mate.py_ coa solución deste proxectiño.
