--- a/_python/t04.md
+++ b/_python/t04.md
@@ -9,24 +9,20 @@ Uso unha variable coma sempre pero agora será o usuario o que lle dea valor
 
 ### 🧺 Preparación
 
-Precisamos un ficheiro ao que imos chamar **tarefa4_pregunta.py** Facemos o mesmo que na anterior tarefa:
-
-[ Tarefa 0: Crear infraestrutura](../t0)
+Copiade o código seguinte e modificalo ao voso gusto.
 
 ### 💻 Código
 
-No ficheiro *.py* tecleamos:
-
 ```python
-resp = input("Como te chamas?   ");
-print("Guau... que nome máis interesante " , resp);
-print("Ti es unha grande persoa " , resp);
-print("Vales moito " , resp);
-print("Non hai ninguén máis elegante ca " , resp);
-print("e... " , resp , ", o mundo adórate!");
+resp = input("Como te chamas?   ")
+print("Guau... que nome máis interesante " , resp)
+print("Ti es unha grande persoa " , resp)
+print("Vales moito " , resp)
+print("Non hai ninguén máis elegante ca " , resp)
+print("e... " , resp , ", o mundo adórate!")
 ```
 
-### 🎞 Executar
+### 🎞 Executar se o tes nun ficheiro
 
 Lembra teclear:
 ```bash
