--- a/_python/t05.md
+++ b/_python/t05.md
@@ -10,16 +10,13 @@ Se  **resp** é un número e quero usalo despois para facer contas matemáticas 
 
 ### 🧺 Preparación
 
-Precisamos un ficheiro ao que imos chamar **tarefa5_numeritos** Podemos facer o mesmo que antes:
+😭😭 Python decide que o que teclea o usuario é unha cadea. Razón? pois así son as cousas🤷
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+Haberá que transformar o que di o usuario nun número "de verdade" para facer contas con el. O truco é a función **int()**
 
 ### 💻 Código
 
 
-😭😭 Python decide que o que teclea o usuario é unha cadea. Razón? pois así son as cousas🤷
-
-Haberá que transformar o que di o usuario nun número "de verdade" para facer contas con el. O truco é a función **int()**
 
 ```python
 contestado = input("Cal é o teu número favorito? ")
@@ -34,14 +31,12 @@ print("Tres veces do teu número favorito é.... ", triple)
 
 *Aclaración: unha ducia son 12 ovos*
 
-1. Prepara  **tarefa5_ducias2ovos.py**
-2. Pregunta ao usuario cantas ducias de ovos leva a súa tortilla usando `input()`. 
-3. Convirte a resposta do usuario a número con `int()`
-4. Mostra o que dixo o usuario convertido a número.
-5. Fai a conta correspondente para saber cantos ovos leva esa megatortilla.
-6. Mostra en pantalla o resultado do número de ovos.
 
-Sube ao teu repositorio este proxecto chamándolle **tarefa5_ducias2ovos.py**
+- Pregunta ao usuario cantas ducias de ovos leva a súa tortilla usando `input()`. 
+- Convirte a resposta do usuario a número con `int()`
+-  Mostra o que dixo o usuario convertido a número.
+-  Fai a conta correspondente para saber cantos ovos leva esa megatortilla.
+-  Mostra en pantalla o resultado do número de ovos.
 
 
 ### ✏️ Cambios interesantes
