--- a/_python/t06.md
+++ b/_python/t06.md
@@ -8,13 +8,12 @@ Se entendes esto daquela non terás problema cos condicionais, no caso contrario
 
 ### 🧺 Preparación
 
-Precisamos un ficheiro ao que imos chamar **tarefa6_condicionais.py** Podemos facer o mesmo que na anterior tarefa:
+Facede un copiazo deste código:
 
-[ Tarefa 0: Crear infraestrutura](../t0)
 
 ### 💻 Código 
 
-No ficheiro *tarefa6_condicionais.py* tecleamos:
+
 ```python
 posicion = 3
 if(posicion == 1):
@@ -25,6 +24,6 @@ else:
 
 ### ✏️ Cambios interesantes
 
-Como se fará para que  mostre que é medalla de bronce? 
+- Como se fará para que  mostre que é medalla de bronce? 
 
-Como melloramos o código  para preguntar ao usuario cal é a posición na que quedou e que  indique cal é a medalla que lle corresponde?
+- Como melloramos o código  para preguntar ao usuario cal é a posición na que quedou e que  indique cal é a medalla que lle corresponde?
