--- a/_python/t07.md
+++ b/_python/t07.md
@@ -1,56 +1,46 @@
 ---
 layout: python
 title: Tarefa 7 - Funcións
-published: false
+published: true
 ---
-Como fabricamos as nosas propias funcións para despois chamalas? `function( ){ }` é a nosa solución. Debemos falar de ***parámetros*** e de `return`
+Lembrades que empregamos funcións na tarefa na que calculamos raíces cadradas? Como podemos fabricar as nosas propias funcións para despois usalas? `def( )` é a resposta. Debemos falar de ***parámetros*** e de `return`
 
 ### 🧺 Preparación
 
-Precisamos unha carpeta á que imos chamar **tarefa7_funcións** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
-
-[ Tarefa 0: Crear infraestrutura](../t0)
+Proba os códigos seguintes e trata de analizalos debidamente:
 
 ### 💻 Código 1
 
-No ficheiro tarefa7_funcións.py* tecleamos:
-```python
-function sumita(a, b){
-    alert(a+b);
-}
-sumita(11,22);
-sumita(100,200);  
-```
-
-### 🖥 Código 2
-
-Analiza o  seguinte código e trata de imaxinar como funciona:
 
 ```python
-function dividir(x,y){
-		return x/y;
-}
-var resultado = dividir(6,3);
-alert(resultado);
+def sumita(a, b):
+    print(a+b)
+```
+Fai un par de chamadas a esa función e comproba se vai:
+
+```python
+sumita(11,22)
+sumita(100,200)
 ```
 
-### 🖥 Código 3
+###  💻💻 Código 2
 
-```js	
-function mediaNotas(trim1, trim2, trim3){
-	return (trim1 + trim2 + trim3)/3;
-}
-alert(mediaNotas(5,5,7));
+Analiza o  seguinte código e trata de ver as diferenzas co anterior:
+
+```python
+def dividir(x,y):
+    return x/y
 ```
+Como esta función devolve o valor da división teremos que facer  un par de pasos:
 
-### 🎞 Visualizar o javascript
-
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
+```python
+resultado = dividir(6,3)
+print(resultado)
+```
+Pregunta moi importante: fai o experimento de que os números que queres dividir sexan 0
 
 ### ✏️ Cambios interesantes
 
-Fabrica unha función como a do código 1 que se chame `multiplicar()` e que reciba tres parámetros. Chama  a esa función con `multiplicar(1,1,5);`
+Fabrica unha función como a do código 1 que se chame `multiplicar()` e que reciba tres parámetros. Chama  a esa función con `multiplicar(1,1,5)` 
 
-Fabrica unha función coma no código 2 que se chame `encadear();` que reciba dous parámetros que sexan cadeas de caracteres. Chama a esa función con `encadear("Boas","tardes");` para que mostre na alerta o resultado de encadenar esas palabras *(debidamente escrito: con espazo intermedio)* 
-
-Cal é a diferencia entre o código 2 e o código 3?
+Agora faino coma o exemplo do código 2
