--- a/_python/t08.md
+++ b/_python/t08.md
@@ -1,35 +1,49 @@
 ---
 layout: python
-title: Tarefas en xanelas
-published: false
+title: Tarefa 8 - Cantando con lazos
+published: true
 ---
+Repetir e repetir... menudo aburrimento, para eso están as maquinas!!! Usaremos bucles, tamén chamados lazos.  Imos cantar e lembrar a infancia 😉
 
-Que tal se todo o que aprendemos en troques de no IDE ou no terminal aparécelle ao usuario nunha xanela. Queda bastante PRO pero dá  traballo. 
 
 ### 🧺 Preparación
 
-Descarga ou fai un fork do [repositorio de exercicios resoltos de JavaScript](https://github.com/irocho/exerciciosJavascript).
+A sintaxe do bucle `for` é un tanto enrevesada xa que precisa ter a man `range()`. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa:
 
-### 💻 Códigos para analizar e argallar neles
 
-Analiza os exercicios 1, 2 e 3 que teñen en cadanseu *.html* ? Algunha novidade nos  *.js*  que non sexa:
+### 💻 Código 1 
 
-```js
-    document.write(    );
+O primeiro, repetir algo o número de veces que nos pete:
+
+```python
+for repe in range(15):
+	print("Había unha vez un barquito chiquitito... ')
 ```
 
- Fíxate ben no que acontece: estou engadindo etiquetas HTML dentro dunha función que trae de fábrica JavaScript nun ficheiro *.js*
 
-### 🎞 Visualizar o javascript
+### 💻💻 Código 2
 
-Calcamos no *.html*  de cada exercicio. Debería abrirse o navegador mostrando o resultado do noso código.
+Pedímoslle que nos vaia dicindo canto vale. Tamén coñecedes esta canción infantil?
 
-### ☁️   Proxecto de medallas olímpicas  ☁️
+```python
+for numElefantes in range(6):
+	print(numElefantes, ' elefantes se balanceaban sobre la tela... ')
+```
 
-1. Prepara unha carpeta coma sempre, chamada **tarefa8_medallista**.
-2. Fabrica unha función que ten de parámetro  de entrada a posición na que quedou un atleta e devolve o tipo de medalla que se lle concede.
-3. Pregunta ao usuario cal é a posición na que quedou.
-4. Chama á función pasándolle a resposta do usuario.
-5. Mostra na páxina web a posición do atleta e  o tipo de medalla que lle deron
 
-Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa8_medallista**
+### 💻💻💻  Código 3
+
+Tanto teclear código e vai ser xusto no seguinte onde aprendemos a contar dende 14 ata 18:
+
+``` python
+for nnn in range(14,18): 
+	print(nnn)
+```
+
+
+### ✏️ Cambios interesantes
+Moi importante que entendades que nuns casos a variable non está dentro do `for` e noutros si.
+
+- Mellora o código 2 para que no se dea o caso  de 0 elefantes (cousa ben rara) e chegue a cantar ata 10. 
+- Teclea un bucle que conte dende 20 ata 30 elefantes balanceándose.
+- Coñecedes "El cuento de la buena pipa" ? Eu diría que con todo o que sabemos de preguntar ao usuario, condicionais e lazos `for` podemos programalo agora mesmiño.
