javascript  para contornos

--- a/_javascript/t01.md
+++ b/_javascript/t01.md
@@ -6,23 +6,23 @@ title: Tarefa 1 - alert();
 
 Comezamos co noso primeiro ficheiro de javascript empregando unha función que trae de fábrica. É unha palabra en inglés, parénteses e punto e coma final. O interesante vai nas parénteses.
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa1_alert** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+[ Tarefa 0: Crear infraestrutura](../t0) -->
 
 ### 🖥 Código
 
-No ficheiro *escripito.js* tecleamos a seguinte liña de código:
+<!-- No ficheiro *escripito.js* tecleamos a seguinte liña de código: -->
 
 ```javascript
     alert("Moi boas a todos");
 ```
 
-### 🎞 Visualizar o javascript
+<!-- ### 🎞 Visualizar o javascript
 
-Calcamos en  *index.html* e debería abrirse o navegador mostrando o resultado do noso código.
+Calcamos en  *index.html* e debería abrirse o navegador mostrando o resultado do noso código. -->
 
 ### ✏️ Cambios interesantes
  
