--- a/_javascript/t02.md
+++ b/_javascript/t02.md
@@ -6,38 +6,39 @@ title: Tarefa 2 - Variables
 
 Imos complicalo un chisco. Se non poñemos comiñas na tarefa anterior JavaScript entende que ten que poñer na ventá emerxente o valor dunha variable.😰
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa2_var** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+[ Tarefa 0: Crear infraestrutura](../t0) -->
 
 ### 🖥 Código
 
-No ficheiro *.js* tecleamos a seguinte liña de código:
+<!-- No ficheiro *.js* t -->
+Tecleamos a seguinte liña de código:
 
 ```js
-    var gastoHoxe;
+    let gastoHoxe;
     gastoHoxe = 10;
     alert(gastoHoxe);
 ```
 
 No código declaramos unha variable chamada `gastoHoxe` e démoslle o valor 10
 
-*Vale 👍... tamén se pode poñer de golpe var gastoHoxe=10;👍*
+*Vale 👍... tamén se pode poñer de golpe let gastoHoxe=10;👍*
 
-### 🎞 Visualizar o javascript
+<!-- ### 🎞 Visualizar o javascript
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
+Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código. -->
 
 ### ✏️ Variacións: contas diarias
 
 Fai un pequeno cambio no teu ficheiro *.js*:
 
 ```js
-    var gastoHoxe = 22.22;
-    var gastoOnte = 33.33;
-    var total = gastoHoxe + gastoOnte;
+    let gastoHoxe = 22.22;
+    let gastoOnte = 33.33;
+    let total = gastoHoxe + gastoOnte;
     alert(total);
 ```
 
@@ -47,7 +48,6 @@ Inventa todas as variacións que se te ocurran: con sumas, decimais, restas, mul
 
 Fai as túas anotacións.
 
-###
- 🤓 Avanzado:
+### 🤓 Avanzado:
 
 [https://codepen.io/nominalaeon/post/using-variable-declarations-to-improve-readability](https://codepen.io/nominalaeon/post/using-variable-declarations-to-improve-readability)
