--- a/_javascript/t03.md
+++ b/_javascript/t03.md
@@ -6,24 +6,25 @@ title: Tarefa 3 - Mates
 
 E como se fai unha raíz cadrada? Benvidos ao fascinante mundo das bibliotecas (ou librerías) das linguaxes de programación.
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa3_mates** 
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+[ Tarefa 0: Crear infraestrutura](../t0) -->
 
 ### 🖥 Código
 
-No ficheiro *.js* tecleamos:
+<!-- No ficheiro *.js* t -->
+Tecleamos:
 ```js
-    var moito = 9 ;
-    var raiz = Math.sqrt(moito);
+    let moito = 9 ;
+    let raiz = Math.sqrt(moito);
     alert(raiz);
 ```
 
 ### 🎞 Visualizar o javascript
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
+<!-- Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código. -->
 
 Cando unha función non ven de fábrica pode ser que estea nunha biblioteca. No noso caso a función ***sqrt()*** forma parte da biblioteca ***Math*** polo que  se indica como `Math.sqrt();`
 
@@ -39,8 +40,8 @@ Investiga ti por internet un chisco na biblioteca `Math`
 - O valor do número PI sen decimais
 - A función que responde coa menor das variables
 - Unha función que xenera un número aleatorio entre cero e tres
-
-Sube ao teu repositorio en GitHub nunha carpeta á que chamaremos **tarefa3_mates** que conteña un *.js* que mostre todos os puntos pedidos
+<!-- 
+Sube ao teu repositorio en GitHub nunha carpeta á que chamaremos **tarefa3_mates** que conteña un *.js* que mostre todos os puntos pedidos -->
 
 ## Precisas axuda?
 
