--- a/_javascript/t04.md
+++ b/_javascript/t04.md
@@ -6,46 +6,47 @@ title: Tarefa 4 - Cadeas
 
 Alguén sabe o que significa sumar palabras? JavaScript é quen de facelo.
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa4_cadeas** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+[ Tarefa 0: Crear infraestrutura](../t0) -->
 
 ### 💻 Código
 
-No ficheiro *.js* tecleamos:
+<!-- No ficheiro *.js* t -->
+Tecleamos:
 
 ```js
-    var euSon = "Profe" + " que " + " conta " + " JavaScript ";
+    let euSon = "Profe" + " que " + " conta " + " JavaScript ";
     alert(euSon);
 ```
 
-### 🎞 Visualizar o javascript
+<!-- ### 🎞 Visualizar o javascript
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
+Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código. -->
 
 ### ✏️ Cambios interesantes
 
 Para facer un salto de liña:
 ```js
-    var euSon = "Profe" + " que " + " conta " + "\n" +" JavaScript ";
+    let euSon = "Profe" + " que " + " conta " + "\n" +" JavaScript ";
     alert(euSon);
 ```
 
 Agora imaxina ti o que fai un método chamado  `.length` *Certo que un chisco de inglés axuda* 
 
 ```js
-    var oficio = "Profe";
-    var longura = oficio.length;
+    let oficio = "Profe";
+    let longura = oficio.length;
     alert(longura);
 ```
 
 Agora imaxina ti o que fai unha nova función que trae de fábrica chamada  `.slice();`  *Certo que un chisco de inglés tamén axuda* 
 
 ```js
-    var oficio = "Profe";
-    var rebanada = oficio.slice(3,5);
+    let oficio = "Profe";
+    let rebanada = oficio.slice(3,5);
     alert(rebanada);
 ```
 
