--- a/_javascript/t05.md
+++ b/_javascript/t05.md
@@ -6,18 +6,18 @@ title: Tarefa 5 - Charlando... ^^
 
 Declaro unha variable coma sempre pero agora será o usuario o que lle dea valor
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa5_animados** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+[ Tarefa 0: Crear infraestrutura](../t0) -->
 
 ### 🖥 Código
 
-No ficheiro *.js* tecleamos:
+<!-- No ficheiro *.js* tecleamos: -->
 
 ```js
-    var nome;
+    let nome;
     nome = prompt("Como te chamas?   ");
     alert("Guau... que nome máis interesante " + nome);
     alert("Ti es unha grande persoa " + nome);
@@ -26,9 +26,9 @@ No ficheiro *.js* tecleamos:
     alert("e... " + nome + ", o mundo adórate!");
 ```
 
-### 🎞 Visualizar o javascript
+<!-- ### 🎞 Visualizar o javascript
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
+Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código. -->
 
 Subidón de autoestima se pos o teu nome!!!!
 
@@ -53,6 +53,6 @@ Haberá que transformar o que di o usuario nun número se queremos facer contas 
 5. Fai a conta correspondente para saber cantos ovos leva esa megatortilla.
 6. Mostra nunha alerta o resultado do número de ovos
 
-Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa5_ducias2ovos**
+<!-- Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa5_ducias2ovos** -->
 
 Quen pasa de ducias a ovos pasa tamén de km a metros ou de euros a dólares.... 
