--- a/_javascript/t06.md
+++ b/_javascript/t06.md
@@ -4,18 +4,18 @@ title: Tarefa 6 - Condicionais
 ---
 Se entendes esto daquela non terás problema cos condicionais no caso contrario... vas ter que analizalo con calma. Ou o que vén sendo o mesmo: `if (`entendes `==` si`) {`No problem`} else {`analiza con calma`}`
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa6_condicionais** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+[ Tarefa 0: Crear infraestrutura](../t0) -->
 
 ### 🖥 Código 1
 
-No ficheiro *.js* tecleamos:
+<!-- No ficheiro *.js* tecleamos: -->
 ```js
 
-    var posicion = 3;
+    let posicion = 3;
     if(posicion == 1) {
     	alert("Medalla de ouro");
     } else {
@@ -23,23 +23,22 @@ No ficheiro *.js* tecleamos:
     }
 ```
 
-### 🖥 Código 2
+### 🖥🖥 Código 2
 
 Analiza o  seguinte código e trata de imaxinar como funciona:
 
 ```js
-
-    var desexo = confirm("Queres seguer nesta páxina?");
+    let desexo = confirm("Queres seguer nesta páxina?");
     if (desexo == true){
     	alert("Aquí nos quedamos");
     } else {
-    	alert("De verdade acabas de premer en Cancel ?");
+    	alert("De verdade acabas de premer en Cancelar ?");
     }
 ```
 
-### 🎞 Visualizar o javascript
+<!-- ### 🎞 Visualizar o javascript
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
+Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código. -->
 
 ### ✏️ Cambios interesantes
 
