--- a/_javascript/t09.md
+++ b/_javascript/t09.md
@@ -4,9 +4,9 @@ title: Tarefa 9 - Cantando con bucles
 ---
 Repetir e repetir... menudo aburrimento, para eso están as maquinas!!! Nós pola nosa banda imos cantar e lembrar a infancia 😉
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
-Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
+Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0) -->
 
 
 ### 🖥 Código 1 
@@ -14,13 +14,11 @@ Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sem
 A sintaxe do bucle `for` é un tanto enrevesada: dentro de paréntese, con puntos e comas polo medio, de súpeto esa _cruz_ repetida. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa:
 
 ```js
-document.write('<h2> Bucle FOR </h2>');
-
-document.write('<h3> ☞ Facer algo cinco veces </h3>');
-for (var i=1; i<= 5; i++) {
-	document.write('<p> Había una vez un barquito chiquitito... </p>');
+for (let i=1; i<= 5; i++) {
+	alert('<p> Había una vez un barquito chiquitito... </p>');
 }
 ```
+
  ✏️ Cambios interesantes: 
 
 ► que pasa se en troques de 5 pos 27 ?
@@ -28,14 +26,13 @@ for (var i=1; i<= 5; i++) {
 ► e se non repites o signo máis e pos dous signos menos inicializando a variable a 7 ?
 
 
-### 🖥 Código 2
+### 🖥🖥 Código 2
 
 Temos que sacar máis partido desa variable. Pedímoslle que nos vaia dicindo canto vale.
 
 ```js
-document.write('<h3> ☞ Outra canción infantil </h3>');
-for (var i=2; i<= 10; i++) {
-	document.write(i +' 🐘 se balanceaban sobre la tela... ');
+for (let i=2; i<= 10; i++) {
+	alert(i +' 🐘 se balanceaban sobre la tela... ');
 }
 ```
 
@@ -46,12 +43,12 @@ for (var i=2; i<= 10; i++) {
 ► e se non repites o signo máis e pos dous menos inicializando a variable a 13 ?
 
 
-### 🖥 Código 3
+### 🖥🖥🖥 Código 3
 Tanto teclear código e vai ser xusto no seguinte onde aprendemos a contar:
 
 ```js
 document.write('<h3> ☞ Aprender a contar ata 10 </h3>');
-for (var i=0; i<= 10; i++) {
+for (let i=0; i<= 10; i++) {
 	document.write(i + ', ');
 }
 ```
@@ -63,7 +60,7 @@ for (var i=0; i<= 10; i++) {
 ► modifica todo para que conte para atrás de 88 ata 77
 
 
-### 🖥 Código 4
+### 🖥🖥🖥🖥 Código 4
 
 Pegando saltitos:
 
@@ -77,6 +74,6 @@ for (var i=10; i<= 44; i=i+5) {
 
 ► modifica todo para que nos dea a lista de números pares
 
-### 🎞 Visualizar o javascript
+<!-- ### 🎞 Visualizar o javascript
 
-Calcamos no *.html*  de cada exercicio. Debería abrirse o navegador mostrando o resultado do noso código.
+Calcamos no *.html*  de cada exercicio. Debería abrirse o navegador mostrando o resultado do noso código. -->
