--- a/_javascript/t10.md
+++ b/_javascript/t10.md
@@ -1,6 +1,8 @@
 ---
 layout: javascript
 title: Tarefa 10 - Conto do while ^^
+published: false
+
 ---
 Xa sabemos de bucles e xogando chegamos ata os bucles infindos. Hai outro xeito de repetir unha parte do código, como no _cuento de la buena pipa._
 
