--- a/_javascript/t12.md
+++ b/_javascript/t12.md
@@ -1,6 +1,8 @@
 ---
 layout: javascript
 title: Tarefa 12 - Propostas
+published: false
+
 ---
 
 Esta derradeira tarefa é voluntaria e  simplemente son propostas de traballo para entrenar:
