--- a/_javascript/t07.md
+++ b/_javascript/t07.md
@@ -4,15 +4,15 @@ title: Tarefa 7 - Funcións
 ---
 Como fabricamos as nosas propias funcións para despois chamalas? `function( ){ }` é a nosa solución. Debemos falar de ***parámetros*** e de `return`
 
-### 🧺 Preparación
+<!-- ### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa7_funcións** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](../t0)
+[ Tarefa 0: Crear infraestrutura](../t0) -->
 
 ### 🖥 Código 1
-
-No ficheiro *.js* tecleamos:
+<!-- 
+No ficheiro *.js* tecleamos: -->
 ```js
     function sumita(a, b){
         alert(a+b);
@@ -21,7 +21,7 @@ No ficheiro *.js* tecleamos:
     sumita(100,200);  
 ```
 
-### 🖥 Código 2
+### 🖥🖥 Código 2
 
 Analiza o  seguinte código e trata de imaxinar como funciona:
 
@@ -29,11 +29,11 @@ Analiza o  seguinte código e trata de imaxinar como funciona:
     function dividir(x,y){
     		return x/y;
     }
-    var resultado = dividir(6,3);
+    let resultado = dividir(6,3);
     alert(resultado);
 ```
 
-### 🖥 Código 3
+### 🖥🖥🖥 Código 3
 
 ```js	
     function mediaNotas(trim1, trim2, trim3){
@@ -42,9 +42,9 @@ Analiza o  seguinte código e trata de imaxinar como funciona:
     alert(mediaNotas(5,5,7));
 ```
 
-### 🎞 Visualizar o javascript
+<!-- ### 🎞 Visualizar o javascript
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
+Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código. -->
 
 ### ✏️ Cambios interesantes
 
